# RayTracing_OpenMP

./: CMakeLists.txt  README.md  Ray.h  Scene.h  Vector3.h  main.cpp
